# rust-webserver-test

./: Cargo.toml  README.md  main.tf
.github/workflows/: action1.yml
src/: main.rs
