[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
itertools = "0.10.5"
primes = "0.3.0"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.4.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
